Do not restart more than 3 times in 5 minutes.
This is the first part of a fix for issue #14.

--- a/autimaat.service
+++ b/autimaat.service
@@ -2,6 +2,8 @@
 Description=IRC bot for #autsider
 Wants=network-online.target
 After=network.target network-online.target
+StartLimitInterval=300s
+StartLimitBurst=3
 
 [Service]
 Type=forking
